<resources>

    <!--APPLICATION NAMES-->
    <string name="app_name">Loop</string>
    <string name="title_activity_ride_detail">Map</string>
    <string name="facebook_app_id">1756316771297730</string>

    <string name="create_ride_title">Create</string>
    <string name="book_ride_title">Book</string>
    <string name="message_button">Message</string>


    <!--LOGIN ACTIVITY-->
    <string name="loop_slogan">Made on the way for you.</string>
    <string name="login_with_facebook">Log In with Facebook</string>

    <!--REGISTRATION ACTIVITY-->
    <string name="registration_name_header">NAME</string>
    <string name="registration_phone_header">PHONE</string>
    <string name="registration_phone_field">Enter your phone number...</string>
    <string name="register_button">Register</string>
    <string name="phone_consent_message">Your phone number is used so that drivers and their riders can contact each other</string>

    <!--RIDES ACTIVITY-->
    <string name="rides_loop_title">loop</string>

    <!--RIDES ACTIVITY NAV DRAWER-->
    <string name="nav_name_header">@string/registration_name_header</string>
    <string name="nav_phone_header">@string/registration_phone_header</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="nav_you">You</string>

    <!--PROFILE ACTIVITY-->
    <string name="profile_name_header">@string/registration_name_header</string>
    <string name="profile_phone_header">@string/registration_phone_header</string>
    <string name="profile_message">Message</string>

    <!--SEE EXISTING RIDE STRINGS-->
    <string name="date_edit_text">On the road today.</string>
    <string name="time_edit_text">Leaving now.</string>
    <string name="pickup_edit_text">Starts here.</string>
    <string name="dropoff_edit_text">Ends here (but not really).</string>
    <string name="car_edit_text">My gorgeous car.</string>
    <string name="price_edit_text">Payment for my hardwork.</string>
    <string name="edit_pickup_desc">Pick up your loopers here.</string>
    <string name="dropoff_edit_desc">Drop off your loopers here.</string>
    <string name="create_ride_button">Create</string>
    <string name="book_ride_button">Book</string>
    <string name="delete_ride_button">Delete</string>

    <!--PAGE TITLES-->
    <string name="my_rides_page_title">RIDER</string>
    <string name="all_rides_page_title">ALL</string>
    <string name="driver_rides_page_title">DRIVER</string>

    <!--RIDE OVERVIEW FEEDBACK SNACKBARS-->
    <string name="already_booked_snackbar">You have already booked this ride!</string>
    <string name="book_ride_failure">Could not book your ride, please try again...</string>
    <string name="book_ride_success">Successfully booked ride!</string>
    <string name="book_your_own_rides">Sorry but you cannot book your own rides!</string>
    <string name="unable_to_delete">Sorry, but we could not delete your ride...</string>

    <!--Riders OF Loop-->
    <string name="message_driver">Message</string>

    <!--Driver of Loop-->
    <string name="driver_card_time">TIME</string>
    <string name="driver_card_riders">riders</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
