<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/scroll_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                style="@style/detail_container"
                android:id="@+id/date_container"
                android:onClick="dateClickedAction"
                >

                <ImageView
                    android:src="@drawable/calendar"
                    android:id="@+id/calendar_asset"
                    style="@style/detail_asset"
                    />

                <TextView
                    android:text="DATE"
                    android:id="@+id/edit_date_header"
                    android:layout_alignTop="@+id/calendar_asset"
                    android:layout_toRightOf="@id/calendar_asset"
                    style="@style/detail_item_header"
                    />

                <TextView
                    android:id="@+id/edit_ride_date"
                    android:text="@string/date_edit_text"
                    android:layout_below="@+id/edit_date_header"
                    android:layout_alignStart="@+id/edit_date_header"
                    style="@style/detail_item"
                    />

                <ImageView
                    style="@style/chevron"/>

            </RelativeLayout>

            <View
                style="@style/divider"/>

            <RelativeLayout
                style="@style/detail_container"
                android:id="@+id/time_container"
                >

                <ImageView
                    android:src="@drawable/time"
                    android:id="@+id/time_asset"
                    style="@style/detail_asset"
                    />

                <TextView

                    android:text="TIME"
                    android:id="@+id/edit_time_header"
                    android:layout_alignTop="@+id/time_asset"
                    android:layout_toRightOf="@id/time_asset"
                    style="@style/detail_item_header"
                    />

                <TextView
                    android:id="@+id/edit_ride_time"
                    android:text="@string/time_edit_text"
                    android:layout_below="@+id/edit_time_header"
                    android:layout_alignStart="@+id/edit_time_header"
                    style="@style/detail_item"
                    />

                <ImageView
                    style="@style/chevron"/>


            </RelativeLayout>

            <View
                style="@style/divider"/>

            <RelativeLayout
                style="@style/detail_container"
                android:id="@+id/pickup_container"
                >

                <ImageView
                    android:src="@drawable/location"
                    android:id="@+id/location_asset"
                    style="@style/detail_asset"
                    />

                <TextView
                    android:text="FROM"
                    android:id="@+id/pickup_header"
                    android:layout_alignTop="@+id/location_asset"
                    android:layout_toRightOf="@id/location_asset"
                    style="@style/detail_item_header"

                    />

                <Spinner
                    android:id="@+id/pickup_spinner"
                    android:layout_below="@+id/pickup_header"
                    android:layout_alignLeft="@+id/pickup_header"

                    style="@style/spinners"
                />

                <!--<TextView-->
                    <!--android:id="@+id/ride_pickup"-->
                    <!--android:text="@string/pickup_edit_text"-->
                    <!--android:layout_below="@+id/pickup_header"-->
                    <!--android:layout_alignStart="@+id/pickup_header"-->
                    <!--style="@style/detail_item"-->
                    <!--/>-->

                <!--<ImageView-->
                    <!--style="@style/chevron"/>-->

            </RelativeLayout>

            <View
                style="@style/divider"/>

            <RelativeLayout
                style="@style/detail_container"
                android:id="@+id/dropoff_container"
                >

                <ImageView
                    android:src="@drawable/address"
                    android:id="@+id/address_asset"
                    style="@style/detail_asset"
                    />

                <TextView
                    android:text="TO"
                    android:id="@+id/dropoff_header"
                    android:layout_alignTop="@+id/address_asset"
                    android:layout_toRightOf="@id/address_asset"
                    style="@style/detail_item_header"
                    />

                <!--<TextView-->
                    <!--android:id="@+id/ride_dropoff"-->
                    <!--android:text="@string/dropoff_edit_text"-->
                    <!--android:layout_below="@+id/dropoff_header"-->
                    <!--android:layout_alignStart="@+id/dropoff_header"-->
                    <!--style="@style/detail_item"-->
                    <!--/>-->

                <Spinner
                    android:id="@+id/dropoff_spinner"
                    android:layout_below="@+id/dropoff_header"
                    android:layout_alignLeft="@+id/dropoff_header"

                    style="@style/spinners"
                    />

                <!--<ImageView-->
                    <!--style="@style/chevron"/>-->

            </RelativeLayout>

            <View
                style="@style/divider"/>

            <RelativeLayout
                style="@style/detail_container"
                android:id="@+id/car_container"
                >

                <ImageView
                    android:src="@drawable/pantone"
                    android:id="@+id/patone_asset"
                    style="@style/detail_asset"
                    />

                <TextView
                    android:text="CAR COLOUR &amp; MODEL"
                    android:id="@+id/car_header"
                    android:layout_alignTop="@+id/patone_asset"
                    android:layout_toRightOf="@id/patone_asset"
                    style="@style/detail_item_header"
                    />

                <EditText
                    android:id="@+id/ride_car"
                    android:hint="@string/car_edit_text"
                    android:layout_below="@+id/car_header"
                    android:layout_alignStart="@+id/car_header"
                    android:layout_marginLeft="14dp"
                    style="@style/detail_item_editor"
                    />

            </RelativeLayout>

            <View
                style="@style/divider"/>

            <RelativeLayout
                style="@style/detail_container"
                android:id="@+id/price_container"
                >

                <ImageView
                    android:src="@drawable/price"
                    android:id="@+id/price_asset"
                    style="@style/detail_asset"
                    />

                <TextView
                    android:text="PRICE"
                    android:id="@+id/price_header"
                    android:layout_alignTop="@+id/price_asset"
                    android:layout_toRightOf="@id/price_asset"
                    style="@style/detail_item_header"
                    />

                <EditText
                    android:id="@+id/ride_price"
                    android:hint="@string/price_edit_text"
                    android:layout_below="@+id/price_header"
                    android:layout_alignStart="@+id/price_header"
                    style="@style/detail_item_editor"
                    android:layout_marginLeft="14dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:text="CAD"
                    android:textColor="@color/text"
                    android:alpha="0.5"/>
            </RelativeLayout>

            <View
                style="@style/divider"/>

            <RelativeLayout
                style="@style/description_container">

                <TextView
                    android:text="PICKUP"
                    android:id="@+id/pickup_description_header"
                    style="@style/description_header_item"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/pickup_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_pickup_desc"
                    android:textColorHint="@color/textSecondary"
                    android:focusable="true"
                    style="@style/description_field"
                    />

            </RelativeLayout>

            <View
                style="@style/divider"/>

            <RelativeLayout
                style="@style/description_container">

                <TextView
                    android:text="DROPOFF"
                    android:id="@+id/dropoff_description_header"
                    style="@style/description_header_item"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dropoff_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:hint="@string/dropoff_edit_desc"
                    android:textColorHint="@color/textSecondary"
                    style="@style/description_field"
                    />

            </RelativeLayout>

            <View
                style="@style/divider"/>

            <RelativeLayout
                style="@style/detail_container"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="NUMBER OF SEATS"
                    android:textColor="@color/text"
                    android:id="@+id/number_of_seats_header"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/passenger_center"/>

                <ImageView
                    android:layout_below="@id/number_of_seats_header"
                    android:id="@+id/create_rider3"
                    android:onClick="imageFactoryAction"
                    style="@style/rider_asset_style"
                    android:layout_toLeftOf="@id/passenger_center"/>

                <ImageView
                    android:layout_below="@id/number_of_seats_header"
                    android:id="@+id/create_rider2"
                    android:onClick="imageFactoryAction"
                    style="@style/rider_asset_style"
                    android:layout_toLeftOf="@id/create_rider3"/>

                <ImageView
                    android:layout_below="@id/number_of_seats_header"
                    android:id="@+id/create_rider1"
                    android:onClick="imageFactoryAction"
                    style="@style/rider_asset_style"
                    android:layout_toLeftOf="@id/create_rider2"/>

                <ImageView
                    android:layout_below="@id/number_of_seats_header"
                    android:id="@+id/create_rider4"
                    android:onClick="imageFactoryAction"
                    style="@style/rider_asset_style"
                    android:layout_toRightOf="@id/passenger_center"/>

                <ImageView
                    android:layout_below="@id/number_of_seats_header"
                    android:id="@+id/create_rider5"
                    android:onClick="imageFactoryAction"
                    style="@style/rider_asset_style"
                    android:layout_toRightOf="@id/create_rider4"/>

                <ImageView
                    android:layout_below="@id/number_of_seats_header"
                    android:id="@+id/create_rider6"
                    android:onClick="imageFactoryAction"
                    style="@style/rider_asset_style"
                    android:layout_toRightOf="@id/create_rider5"/>

            </RelativeLayout>

            <View
                style="@style/divider"/>

            <RelativeLayout
                style="@style/detail_container"
                android:padding="12dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_button"
                    android:layout_centerHorizontal="true"
                    android:text="@string/create_button_text"
                    android:textColor="@color/white"
                    android:onClick="createButtonClicked"
                    android:background="@drawable/bg1"
                    android:layout_marginLeft="12dp"
                    android:clickable="false"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/create_button"
                    android:padding="12dp"
                    android:id="@+id/field_validator"
                    android:text="Disabled until all fields are filled."
                    android:textColor="@color/textSecondary"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>